--- a/OrdersDashboard/OrdersDashboard.csproj
+++ b/OrdersDashboard/OrdersDashboard.csproj
@@ -6,11 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="compilerconfig.json" />
     <Content Remove="Shared\NavMenu1.razor" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Shared\NavMenu1.razor.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\style.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="compilerconfig.json" />
   </ItemGroup>
 
   <ItemGroup>
