--- a/OrdersDashboard/OrdersDashboard.csproj
+++ b/OrdersDashboard/OrdersDashboard.csproj
@@ -22,7 +22,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.10" PrivateAssets="all" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Syncfusion.Blazor" Version="19.3.0.43" />
+    <PackageReference Include="Syncfusion.Blazor.Cards" Version="19.3.0.43" />
+    <PackageReference Include="Syncfusion.Blazor.Charts" Version="19.3.0.43" />
+    <PackageReference Include="Syncfusion.Blazor.Grid" Version="19.3.0.43" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
